Refactoring OpeningHoursRepositoryTest for method getRandomizedOHRuleEntityWithNameNotInList to improve and fix code.